--- a/GroupForming.Tests/GroupForming.Tests.csproj
+++ b/GroupForming.Tests/GroupForming.Tests.csproj
@@ -65,6 +65,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="GroupFormerTests.cs" />
+    <Compile Include="GroupsExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
