--- a/GroupForming.Tests/GroupForming.Tests.csproj
+++ b/GroupForming.Tests/GroupForming.Tests.csproj
@@ -64,7 +64,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="GroupFormerTests.cs" />
+    <Compile Include="GroupShufflerTests.cs" />
     <Compile Include="GroupsExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
