--- a/GroupForming/GroupForming.csproj
+++ b/GroupForming/GroupForming.csproj
@@ -40,7 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Group.cs" />
-    <Compile Include="GroupFormer.cs" />
+    <Compile Include="GroupShuffler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
